--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -1,24 +1,27 @@
 .status-bar{
-    display:flex;
-    justify-content:center;
-    padding:5px 3px;
     position:fixed;
+    box-sizing: border-box;
+    width:100%; 
     top:0;
-    width:100%;
+    display:flex;
+    justify-content:center;   
+    padding: 5px 3px;    
 }
 .status-bar__column{
     width:33%;
-  
-
 }
 .status-bar__column:first-child span{
-    margin-right: 5px;
+    margin-right:5px;
+}
+.status-bar__column:first-child {
+   display: flex;
+   justify-content: flex-start;
 }
 .status-bar__column:nth-child(2){
     display: flex;
     justify-content: center;
 }
-.status-bar__column:last-child{
+.status-bar__column:last-child {
     display: flex;
     justify-content: flex-end;
     align-items: center;
