--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -5,7 +5,7 @@
     padding:var(--horizontal-space);
     padding-top:40px;   
     opacity: 0.9;
-    margin-bottom:15px;
+    margin-bottom:5px;
 }
 
 .screen-header__title{
@@ -16,4 +16,32 @@
 .screen-header__icons span{
     margin-left:25px;
     position:relative;
+}
+
+@keyframes rotateCog {
+    from{
+        transform: none;
+    }
+    to{
+        transform: rotateZ(360deg);
+    }
+}
+
+.screen-header__icons .fa-gear:hover {
+    animation: rotateCog 1s linear infinite;
+}
+
+@keyframes rotateMusic {
+    from{
+        transform: rotateZ(-30deg);
+    }
+    
+    to{
+        transform: rotateZ(30deg);
+    }
+}
+
+.screen-header__icons .fa-music:hover{
+    animation: rotateMusic 1s ease-in-out infinite;
+    animation-direction: alternate;
 }
