--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -1,6 +1,6 @@
 #chat-screen{
     background-color: #abc1d1;
-    height:11000vh;
+    height:500vh;
 
 }
 
@@ -23,12 +23,26 @@
     top:5px;
     z-index: 1;
 }
+
+@keyframes fadeIn {
+    from{
+        transform: translateY(10px);
+        opacity: 0;
+    }
+    to{
+        transform: none;
+opacity: 1;
+    }
+    
+}
+
 .main-chat{
-    margin-top:120px;
+    margin-top: 110px;
     display: flex;
     flex-direction: column;
     align-items: center;
     font-size:14px;
+    animation: fadeIn 0.3s linear;
 }
 
 .chat__timestamp{
@@ -39,11 +53,65 @@
     margin-bottom:25px;
 }
 
+@keyframes chatMovingleft{
+    from{
+        
+        opacity: 0.3;
+
+    }
+    
+    to{
+transform: none;
+opacity: 1;
+    }
+}
+
 .message-row{
     width:100%;
     display: flex;
     margin-bottom:25px;
+    opacity: 0;
+    transform: translateX(-100%);
+    animation: chatMovingleft 1s ease-out forwards;
 }
+.message-row:nth-child(2){
+    animation-delay: 0.3s;
+} 
+.message-row:nth-child(3){
+    animation-delay:0.5s;
+}
+.message-row:nth-child(4){
+    animation-delay: 0.8s;  
+}
+.message-row:last-child{
+    animation-delay: 1.1s;  
+}
+/* 왜 5번(마지막)까지 코드를 써야하는지?
+오른쪽 채팅의 클래스 이름도 .message-row이지만 
+chat-bro와 같은 왼쪽 채팅만 4개 있는 html은 
+4번까지만 써도 동작하여야하는거 아닌지?
+2번을 주석처리 해도 같은 동작을 하는데 이해 X 
+--------------슬랙에 질문 ---------------*/
+
+@keyframes chatMovingright {
+    from{
+        opacity: 0;
+        
+    }
+    to{
+        transform: none;
+        opacity: 1;
+    }
+}
+
+.message-row--own{
+    opacity: 0;
+    transform: translateX(100%);
+    animation: chatMovingright 1s ease-out forwards;
+    animation-delay: 10s;
+}
+
+
 
 .message-row img {
 width:50px;
@@ -104,6 +172,7 @@ margin-right:10px;
     padding:5px 25px;
     align-items: center;
     box-sizing: border-box;
+    transition: all .3s ease-in-out;
 }
 .reply .reply__column:first-child{
     width:10%;
@@ -118,6 +187,7 @@ margin-right:10px;
     border:var(--main-border);
     border-radius: 20px;
     box-sizing: border-box;
+    transition: all .3s ease-in-out;
 }
 .reply__column:last-child > i,
 .reply__column:last-child button {
@@ -152,6 +222,23 @@ margin-right:10px;
     outline:none;
 }
 
-.reply input::placeholder {
-    /* padding:15px; */
+.reply .reply__column:first-child, 
+.reply .fa-face-grin,
+.reply button {
+    transition: opacity .3s ease-in-out;
+} 
+
+.reply:focus-within .reply__column:first-child, 
+.reply:focus-within .fa-face-grin,
+.reply:focus-within button {
+    opacity: 0;
+}
+
+.reply input:focus {
+    width:95vw;
+    transform: translateX(-13%) translateY(-80px);
+} 
+
+.reply:focus-within {
+    transform: translateY(80px);
 }
